# OneDocs

./: .gitignore  CLAUDE.md  CNAME  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
OneDocs/: package-lock.json  package.json
OneDocs/src/: index.html  main.js  script.js  test.html  tool.html
OneDocs/src-tauri/: tauri.conf.json
OneDocs/src/assets/: arts.json  data.json  lg.json  news.json
OneDocs/src/css/: style.css
OneDocs/src/js/: tool.js  tool_clean.js
OneDocs/src/prompts/: liberal.js  liberal.json
OneDocs/src/styles/: main.css
docs/: CNAME  index.html  script.js  styles.css
src/: App.jsx  App.tsx  tool.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FileUpload.jsx  FileUpload.tsx  FunctionSelector.tsx  LandingPage.jsx  ProgressBar.jsx  ProgressBar.tsx  ResultArea.jsx  ResultDisplay.tsx  Settings.jsx  SettingsModal.tsx  Sidebar.jsx  Toast.tsx  ToolPage.jsx
src/config/: prompts.js  providers.ts
src/config/prompts/: index.ts
src/hooks/: useAnalysis.ts  useDocumentAnalysis.js
src/js/: main.js  tool.js
src/pages/: Landing.tsx  Tool.tsx
src/prompts/: data.js  data.json  news.js  news.json  science.js  science.json
src/services/: api.ts
src/store/: useAppStore.ts
src/stores/: useAppStore.js
src/styles/: index.css
src/types/: index.ts
src/utils/: documentProcessor.js  documentProcessor.ts  markdownRenderer.js  markdownRenderer.ts
